main.css
/*---------------------------------------
	UCBA Media Musings
---------------------------------------*/


/* GLOBAL SETTINGS
---------------------------------------*/

body {
  height: 100vh;
  padding: 2rem;
  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
  background-color: rgb(126, 238, 126);
}

div.wrapper {
  display: grid;
  max-width: 64rem;
  margin-left: auto;
  margin-right: auto;
  border: .5rem solid black;
}

img {
  max-width: 100%;
}


/* HEADER
---------------------------------------*/
/* ⬇ Entire header area */
header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: rgba(0, 80, 0, 0.562);
  padding: 2rem 2rem;
  margin-bottom: .5em;
}

/* ⬇ Contains both the h1 and h2 */
header div.site-name { 
}

header h1 {
  font-family: jost;
  font-size: 3.4em;
}

/* ⬇ The h1's link */
header h1 a {
  text-decoration: none;
  color: rgb(255, 255, 0);
  
}

header h2 {
  padding-top: 1.1rem;
  color: white;
  font-family: Verdana, Geneva, Tahoma, sans-serif;
  font-size: 1.3em;
}



/* MAIN NAVIGATION 
---------------------------------------*/	
/* ⬇ Entire navigation area */
nav.topnav { 
  background-color: rgb(255, 255, 0);
  margin-left: 1rem;
}

nav.topnav ul {
	list-style-type: none;
	display: flex;
	align-items: center;
}

nav.topnav li {

}

/* ⬇ Links in the navigation bar */
nav.topnav a {
	padding: 1rem 1.3rem;
	text-transform: uppercase;
	display: block;
	text-decoration: none;
	color: black; /* ← you can change this */
  transition: all 0.5s ease-in-out;
  font-weight: bold;
}

/* ⬇ Nav link hover effect */
nav.topnav a:hover {
	background-color: white; /* ← you can change this */
	border-radius: 9rem;
}



/* HOMEPAGE LAYOUT
---------------------------------------*/	
/* ⬇ Make this a grid container */
main.homepage {
  display: grid;
  gap: 3rem;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  margin: 1rem;
}

article.blog {
  grid-column: 1/4;
  grid-row: 1/3;
  padding: 2rem 1rem 1rem 2rem;
}
/* ⬇ Headline for the blog */
article.blog h2 { 
  font-size: 1.3em;
  border-bottom: 1px solid black;
  font-family: Verdana, Geneva, Tahoma, sans-serif;
}
/* ⬇ Text in the blog */
article.blog p { /* ← blog text */
  font-size: 1.3em;
  line-height: 1.5;
  padding-top: .4rem;
}

/* ⬇ This controls both asides */
main.homepage aside { 
  background-color: white;
  border: 1px solid black;
  padding: .5rem;
  box-shadow: 5px 5px;
}

/* ⬇ Recent aside */
main.homepage aside.recent {
  grid-column: 4/5;
  grid-row: 1/2;
  /* margin: 1rem; */
}

/* ⬇ Links aside*/
main.homepage aside.links {
  grid-column: 4/5;
  grid-row: 2/3;
  /* margin: 1rem; */
}

/* ⬇ Headlines at the top of the asides*/
main.homepage aside h3 { 
  font-size: 1.2em;
  font-family: Verdana, Geneva, Tahoma, sans-serif;
  padding: 1rem;
  text-align: center;
}

/* ⬇ Unordered list in asides */
main.homepage aside ul { 
  margin: 1rem 0rem 1rem 2rem;
  line-height: 1.4;
}

/* ⬇ List items in the unordered list */
main.homepage aside li { 
  margin-bottom: 1rem;
}

/* ⬇ Link text in the asides */
main.homepage aside li a { 
  font-size: 1.1em;
  margin-right: 1rem;
}

/* ⬇ Aside hover effect */
main.homepage aside li a:hover { 
  color: rgba(0, 80, 0, 0.562);
}



/* CAMPUS AREA
---------------------------------------*/
/* ⬇ Section that contains entire building area */
section.campus	{
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
  grid-column: 1/5;
  grid-row: 3/4;
  margin: 0rem 2rem;
  gap: 1rem;
}	

/* ⬇ This applies to each building section */
section.campus section { /* ← all 6 of the building sections */
  
}

/* ⬇ Name of each building */
section.campus h3 {
  padding-bottom: 1rem;
  font-size: 1em;
  font-family: Verdana, Geneva, Tahoma, sans-serif;
  text-align: center;
}

/* ⬇ Contains each building's image and caption */
section.campus figure {
}

/* ⬇ Picture of each building */
section.campus img {
	border: 5px solid ghostwhite;

}

/* ⬇ Caption text under each building */
section.campus figcaption {
  font-size: .9em;
  /* padding: .5rem .5rem 0rem .5rem; */
}



/* FOOTER
---------------------------------------*/

footer {
  padding: 1em;
  background-color: rgb(255, 255, 0);
  margin-top: .5rem;
}

footer small { 
  line-height: 1.2;
}

/* ⬇ The link in the footer */
footer a {

}

footer a:hover {
  color: rgba(0, 80, 0, 0.562);
}

/* In a future assignment you'll create media queries below. */

/* TABLET
---------------------------------------*/
@media (max-width: 768px) {
  div.wrapper {
  width: 95%;
  border: 0;
  margin: 1rem 1rem 1rem 1rem;
  } 

  body{
      padding: 0;
  }

  header {
    text-align: center;
    flex-direction: column;
  }
  

  nav.topnav {
    margin: 3rem 0rem 0rem 0rem;
  }

  main.homepage {
    grid-template-columns: 1fr 1fr;
    gap: 0;
  }

  article.blog {
    grid-row: 1/2;
    grid-column: 1/3;
  }

  article.blog h2 {
    padding-bottom: .2em;
  }

  main.homepage aside.recent {
    grid-column: 1/2;
    grid-row: 2/3;
    margin: 1em;
  }

  main.homepage aside.links {
    grid-column: 2/3;
    grid-row: 2/3;
    margin: 1em 1.5em 1em 1em;
  }

  section.campus {
    grid-column: 1/3;
    grid-template-columns: 1fr 1fr 1fr;
    margin-top: 4rem;
  }

  section.campus figure {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    align-items: center;
    margin-bottom: 2rem;
  }

  section.campus figcaption {
    grid-column: 2/4;
    font-size: .9em;
    text-align: center;
    padding-left: .3rem;
  }

  section.campus img {
    grid-column: 1/2;
    border: 0px solid ghostwhite;
  }

  
}



/* PHONE
---------------------------------------*/
@media (max-width: 480px) {
  div.wrapper {
    width: 100%;
    margin: 0;
  }

header {
  padding: 1.5em 1em;
  margin: 0;
}

nav.topnav {
  width: 98%;
  margin-bottom: .5em;
}

nav.topnav ul {
  flex-direction: column;
}

nav.topnav li {
  border-bottom: 1px solid black;
  width: 100%;
}

nav.topnav li:last-of-type {
  border: none;
}

main.homepage {
  grid-template-columns: 1fr;
}

article.blog {
  grid-column: 1/2;
  font-size: 1.2em;
  line-height: 1.4;
  padding: 2rem 1rem 1rem 1rem;
}

article.blog p {
  font-size: 1.2em;
  line-height: 1.3;
  padding-top: 1rem;
}

main.homepage aside {
  display: none;
}

section.campus {
  grid-template-columns: 1fr;
  margin: 2rem 0rem 0rem 0rem;
}

section.campus h3 {
  font-size: 1.4em;
}

section.campus figure {
  grid-template-columns: 1fr 2fr;
  background-color: rgb(226, 255, 96);
  border-radius: 3rem;
}

section.campus figcaption {
  font-size: 1.1em;
  line-height: 1.4;
  padding: 1rem 1.5rem 1rem 1rem;
}

}

